--- a/lb1SproTestVersion.vcxproj.filters
+++ b/lb1SproTestVersion.vcxproj.filters
@@ -35,7 +35,13 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Image Include="icon2.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
     <Image Include="icon1.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="icon3.ico">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
